Update sample, add documentation